# stateful-artefacts-for-gitforges

./: 0-AI-MANIFEST.a2ml  AGENTIC.scm  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  README.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v1.0.0.md  ROADMAP.md  SEAM-ANALYSIS.md  SECURITY.md  SMOOTH-SEAL-SHINE-REPORT.md  STATE.scm  VISION.md
.claude/: CLAUDE.md
.github/workflows/: codeql.yml  dependency-review.yml  gnosis-ci.yml  license-compliance.yml  sbom.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  STATE.scm
browser-extension/: README.md  manifest.json  popup.html
browser-extension/icons/: ICONS.md
browser-extension/scripts/: content.js  popup.js
dashboard/: README.md  index.html
dashboard/css/: dashboard.css
dashboard/js/: dashboard.js
examples/: CHANGELOG.template.md  CONTRIBUTING.template.md  ISSUE_TEMPLATE.md  PROFILE.template.md  README-EXAMPLES.md  README-v0.2.md  README.rendered.md  README.template.md  STATE-early.scm  STATE-production.scm  automation-update-stats.sh
gnosis/: README.md  gnosis.cabal  stack.yaml
gnosis/src/: DAX.hs  Main.hs  Paxos.hs  Render.hs  SExp.hs  SixSCM.hs  SixSCMEnhanced.hs  Types.hs
plugins/: README.md
plugins/core/: AIAgent.hs  PluginAPI.hs
plugins/examples/: EmojifyFilter.hs  USAGE-EXAMPLES.md
plugins/registry/: plugin-manifest.json
