cabal-version:       2.4
name:                gnosis
version:             0.2.0.0
synopsis:            Stateful Artefacts Engine - Haskell renderer for dynamic documentation
description:         Gnosis reads Guile Scheme metadata files and renders
                     template documents with dynamic placeholders into
                     static, accessible output for Git forges.
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              hyperpolymath
maintainer:          hyperpolymath
copyright:           2025-2026 Jonathan D.A. Jewell
category:            Development
build-type:          Simple
extra-source-files:  README.md

executable gnosis
  main-is:             Main.hs
  other-modules:       SExp
                     , Render
                     , Types
                     , Paxos
                     , SixSCM
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wmissing-export-lists
                       -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:       base >= 4.14 && < 5
                     , containers >= 0.6
                     , text >= 1.2
                     , time >= 1.9
                     , directory >= 1.3
                     , filepath >= 1.4
